<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Username"
        android:textColor="#616161"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textPhoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone Number (Optional)"
        android:textColor="#616161"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:hint="Phone Number (Optional)"
        android:inputType="phone"
        android:paddingStart="16dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/signup_button"
        android:text="Save Changes"
        android:textColorLink="#03A9F4"
        app:backgroundTint="#5ED381"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/signup_button"
        android:text="Cancel Changes"
        android:textColorLink="#03A9F4"
        app:backgroundTint="#DF1A55"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textEmailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="#616161"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/textPhoneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:background="@drawable/register_input_fields"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:paddingStart="16dp"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/textEmailView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="104dp"
        android:background="@android:color/darker_gray"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="88dp"
        android:background="@android:color/darker_gray"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|end"
        android:background="@android:color/transparent"
        android:contentDescription="Close Button"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage" />


</androidx.constraintlayout.widget.ConstraintLayout>