...
                android:id="@+id/dashboard_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_hello"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/dashboard_user_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dashboard_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="16dp"
            android:text="@string/profile_event_updates"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_join_events"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toEndOf="@+id/button_profile"
            app:layout_constraintTop_toBottomOf="@+id/button_browse" />

        <Button
            android:id="@+id/button_join_events"
...
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/profile_join_events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_event_updates"
            app:layout_constraintTop_toBottomOf="@+id/button_facility" />

        <Button
            android:id="@+id/button_your_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
...
